--- a/kubejs/assets/luna_flesh_reforged/lang/zh_cn.json
+++ b/kubejs/assets/luna_flesh_reforged/lang/zh_cn.json
@@ -1,81 +1,120 @@
 {
-	"key.categories.luna_flesh_reforged":"Luna的DLC",
-	"item.luna_flesh_reforged.incomplete_archotech_framework":"未完成的框架",
-	"item.luna_flesh_reforged.incomplete_archotech_capsule":"转化中的超凡立方",
-	"item.luna_flesh_reforged.archotech_framework":"超凡框架",
-	"item.luna_flesh_reforged.archotech_cube":"超凡立方",
-	"item.luna_flesh_reforged.archotech_capsule":"超凡胶囊",
-	"item.luna_flesh_reforged.archotech_lung":"超凡肺脏",
-	"item.luna_flesh_reforged.archotech_muscle":"超凡肌肉",
-	"item.luna_flesh_reforged.archotech_heart":"超凡心脏",
-	"item.luna_flesh_reforged.archotech_intestine":"超凡肠子",
-	"item.luna_flesh_reforged.archotech_rib":"超凡肋骨",
-	"item.luna_flesh_reforged.archotech_spine":"超凡脊柱",
-	"item.luna_flesh_reforged.archotech_spleen":"超凡脾脏",
-	"item.luna_flesh_reforged.archotech_stomach":"超凡胃",
-	"item.luna_flesh_reforged.archotech_kidney":"超凡肾脏",
-	"item.luna_flesh_reforged.archotech_liver":"超凡肝脏",
-	"item.luna_flesh_reforged.archotech_appendix":"超凡阑尾",
-	"item.luna_flesh_reforged.stoneskin_gland":"石肤腺体",
-	"item.luna_flesh_reforged.archotech_toughskin_gland":"超凡韧肤腺体",
-	"item.luna_flesh_reforged.psylink_neuro":"启灵神经",
-	"item.luna_flesh_reforged.archotech_lastinger":"超凡激活者",
-	"item.luna_flesh_reforged.archotech_mana_reactor":"超凡魔力反应结构",
-	"item.luna_flesh_reforged.lights_bane":"光之驱逐",
-	"item.luna_flesh_reforged.radiance_reaper":"辉光收割者",
-	"item.luna_flesh_reforged.chromatic_rose_heart":"异彩玫瑰之心",
-	"item.luna_flesh_reforged.lager_bone_soul":"画戟魂骨",
-    "effect.kubejs.lunatouch_attack": "攻击距离提升",
-	"luna_flesh_reforged.tooltips.archotech_framework.1":"将科技的最高结晶组合的结果，但似乎还不足以蜕变",
-	"luna_flesh_reforged.tooltips.archotech_cube.1":"通过神秘的手段创造的奇特方块，没有人知道内部究竟是什么结构",
-	"luna_flesh_reforged.tooltips.archotech_capsule.1":"以特殊手段分割活化的超凡物质，内部含有大量超凡微械",
-	"luna_flesh_reforged.tooltips.archotech_heart.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_heart.2":"最大生命值",
-	"luna_flesh_reforged.tooltips.archotech_spine.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_spine.2":"护甲与盔甲韧性",
-	"luna_flesh_reforged.tooltips.archotech_muscle.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_muscle.2":"攻击力",
-	"luna_flesh_reforged.tooltips.archotech_rib.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_rib.2":"护甲",
-	"luna_flesh_reforged.tooltips.archotech_spleen.1":"激活后提供",
-	"luna_flesh_reforged.tooltips.archotech_spleen.2":"最大法力值",
-	"luna_flesh_reforged.tooltips.archotech_stomach.1":"激活后微量提升消化效率",
-	"luna_flesh_reforged.tooltips.archotech_intestine.1":"激活后极微量提升消化效率",
-	"luna_flesh_reforged.tooltips.archotech_kidney.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_kidney.2":"法术冷却缩减",
-	"luna_flesh_reforged.tooltips.archotech_liver.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_liver.2":"暴击概率",
-	"luna_flesh_reforged.tooltips.archotech_lung.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_lung.2":"最大生命值",
-	"luna_flesh_reforged.tooltips.stoneskin_gland.0":"能分泌一种使皮肤硬化的激素的腺体，但会降低敏捷程度",
-	"luna_flesh_reforged.tooltips.stoneskin_gland.1":"激活后提高",
-	"luna_flesh_reforged.tooltips.stoneskin_gland.2":"护甲值",
-	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.0":"能与超凡器官共鸣并生成特殊物质强化皮肤坚韧程度的腺体",
-	"luna_flesh_reforged.tooltips.organlink_per.1":"每存在一种类为",
-	"luna_flesh_reforged.tooltips.organlink_per.2":"的器官，会为你额外添加",
-	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.1":"护甲值",
-	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.2":"激活后提高",
-	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.3":"盔甲韧性",
-	"luna_flesh_reforged.tooltips.psylink_neuro.0":"一种蕴含着超凡之力的神经链接装置，能赋予植入者心灵的力量",
-	"luna_flesh_reforged.tooltips.psylink_neuro.1":"最大法力值",
-	"luna_flesh_reforged.tooltips.psylink_neuro.2":"法术冷却缩减与咒文效力",
-	"luna_flesh_reforged.tooltips.psylink_neuro.3":"激活后提高",
-	"luna_flesh_reforged.tooltips.psylink_neuro.4":"高速神言",
-	"luna_flesh_reforged.tooltips.archotech_lastinger.0":"你就当它真是阑尾",
-	"luna_flesh_reforged.tooltips.lights_bane.0":"被暗影与虚空之力转化的遗物，其真名是对光芒的禁令",
-	"luna_flesh_reforged.tooltips.lights_bane.1":"对处于发光状态的目标造成伤害时",
-	"luna_flesh_reforged.tooltips.radiance_reaper.0":"被光辉之力转化的遗物，其真名是源自辉光的标记",
-	"luna_flesh_reforged.tooltips.radiance_reaper.1":"使用武器大师的镰刀造成伤害时给予目标",
-	"luna_flesh_reforged.tooltips.radiance_reaper.2":"发光&虚弱",
-	"luna_flesh_reforged.tooltips.radiance_reaper.3":"效果",
-	"luna_flesh_reforged.tooltips.radiance_reaper.4":"使用武器大师的镰刀造成伤害时给予自身",
-	"luna_flesh_reforged.tooltips.radiance_reaper.5":"急迫",
-	"luna_flesh_reforged.tooltips.chromatic_rose_heart.0":"被异彩之力晋升的无机心脏，其真名是混合的色彩",
-	"luna_flesh_reforged.tooltips.lager_bone_soul.0":"被光辉与暗影之力转化的遗物，其真名是混沌的触摸",
-	"luna_flesh_reforged.tooltips.lager_bone_soul.1":"使用武器大师的戟造成伤害时",
-	"luna_flesh_reforged.tooltips.lager_bone_soul.2":"的概率在接下来6秒内",
-	"luna_flesh_reforged.tooltips.lager_bone_soul.3":"+2攻击距离",
-	"luna_flesh_reforged.tooltips.tonly.0":"此效果唯一",
-	"luna_flesh_reforged.tooltips.archotech":"超凡",
-	"luna_flesh_reforged.tooltips.chromatic":"异彩"
+	"key.categories.luna_flesh_reforged": "Luna的扩充包",
+	"itemGroup.kubejs.lunadlc": "Luna的扩充包",
+	"item.luna_flesh_reforged.incomplete_archotech_framework": "未完成的框架",
+	"item.luna_flesh_reforged.incomplete_archotech_capsule": "转化中的超凡立方",
+	"item.luna_flesh_reforged.crimson_substance": "绯红物质",
+	"item.luna_flesh_reforged.warped_substance": "诡异物质",
+	"item.luna_flesh_reforged.infected_flesh": "感染肉块",
+	"item.luna_flesh_reforged.enchanted_infected_flesh": "感染肉块",
+	"item.luna_flesh_reforged.nano_plastids": "纳米生物质",
+	"item.luna_flesh_reforged.stardust_core": "星尘核心",
+	"item.luna_flesh_reforged.archotech_framework": "超凡框架",
+	"item.luna_flesh_reforged.archotech_cube": "超凡立方",
+	"item.luna_flesh_reforged.archotech_capsule": "超凡胶囊",
+	"item.luna_flesh_reforged.archotech_lung": "超凡肺脏",
+	"item.luna_flesh_reforged.archotech_muscle": "超凡肌肉",
+	"item.luna_flesh_reforged.archotech_heart": "超凡心脏",
+	"item.luna_flesh_reforged.archotech_intestine": "超凡肠子",
+	"item.luna_flesh_reforged.archotech_rib": "超凡肋骨",
+	"item.luna_flesh_reforged.archotech_spine": "超凡脊柱",
+	"item.luna_flesh_reforged.archotech_spleen": "超凡脾脏",
+	"item.luna_flesh_reforged.archotech_stomach": "超凡胃",
+	"item.luna_flesh_reforged.archotech_kidney": "超凡肾脏",
+	"item.luna_flesh_reforged.archotech_liver": "超凡肝脏",
+	"item.luna_flesh_reforged.archotech_appendix": "超凡阑尾",
+	"item.luna_flesh_reforged.stoneskin_gland": "石肤腺体",
+	"item.luna_flesh_reforged.archotech_toughskin_gland": "超凡韧肤腺体",
+	"item.luna_flesh_reforged.psylink_neuro": "启灵神经",
+	"item.luna_flesh_reforged.enchanted_psylink_neuro": "觉醒启灵神经",
+	"item.luna_flesh_reforged.archotech_lastinger": "超凡激活者",
+	"item.luna_flesh_reforged.archotech_mana_reactor": "超凡魔力反应结构",
+	"item.luna_flesh_reforged.archotech_dragon_appendix": "超凡龙胆",
+	"item.luna_flesh_reforged.archotech_warden_core": "超凡回响核心",
+	"item.luna_flesh_reforged.lights_bane": "光之驱逐",
+	"item.luna_flesh_reforged.radiance_reaper": "辉光收割者",
+	"item.luna_flesh_reforged.chromatic_rose_heart": "异彩玫瑰之心",
+	"item.luna_flesh_reforged.lager_bone_soul": "画戟魂骨",
+	"item.luna_flesh_reforged.infested_lung": "感染肺脏",
+	"item.luna_flesh_reforged.infested_muscle": "感染肌肉",
+	"item.luna_flesh_reforged.infested_heart": "感染心脏",
+	"item.luna_flesh_reforged.infested_intestine": "感染肠子",
+	"item.luna_flesh_reforged.infested_rib": "感染肋骨",
+	"item.luna_flesh_reforged.infested_spine": "感染脊柱",
+	"item.luna_flesh_reforged.infested_spleen": "感染脾脏",
+	"item.luna_flesh_reforged.infested_stomach": "感染胃囊",
+	"item.luna_flesh_reforged.infested_kidney": "感染肾脏",
+	"item.luna_flesh_reforged.infested_liver": "感染肝脏",
+	"item.luna_flesh_reforged.infested_appendix": "感染胆囊",
+	"item.luna_flesh_reforged.infested_heart_distortion": "畸变Infested心脏",
+	"effect.kubejs.lunatouch_attack": "攻击距离提升",
+	"luna_flesh_reforged.tooltips.infested_organ.1": "被邪恶之物感染的畸形器官",
+	"luna_flesh_reforged.tooltips.archotech_framework.1": "将科技的最高结晶组合的结果，但似乎还不足以蜕变",
+	"luna_flesh_reforged.tooltips.archotech_cube.1": "通过神秘的手段创造的奇特方块，没有人知道内部究竟是什么结构",
+	"luna_flesh_reforged.tooltips.archotech_capsule.1": "以特殊手段分割活化的超凡物质，内部含有大量超凡微械",
+	"luna_flesh_reforged.tooltips.stardust_core.1": "魔法之力的凝结，可以与超凡微械共鸣锻造某些超限魔法器官",
+	"luna_flesh_reforged.tooltips.infected_flesh.1": "其中似乎蕴含了某种邪恶的感染",
+	"luna_flesh_reforged.tooltips.infected_flesh.2": "诅咒与感染的力量导致了畸变",
+	"luna_flesh_reforged.tooltips.nano_plastids.1": "被称为technocyte肿瘤的物质，一种布满纳米机器人的恶心组织肿块",
+	"luna_flesh_reforged.tooltips.archotech_heart.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_heart.2": "最大生命值",
+	"luna_flesh_reforged.tooltips.archotech_spine.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_spine.2": "护甲与盔甲韧性",
+	"luna_flesh_reforged.tooltips.archotech_muscle.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_muscle.2": "攻击力",
+	"luna_flesh_reforged.tooltips.archotech_rib.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_rib.2": "护甲",
+	"luna_flesh_reforged.tooltips.archotech_spleen.1": "激活后提供",
+	"luna_flesh_reforged.tooltips.archotech_spleen.2": "最大法力值",
+	"luna_flesh_reforged.tooltips.archotech_stomach.1": "激活后微量提升消化效率",
+	"luna_flesh_reforged.tooltips.archotech_intestine.1": "激活后极微量提升消化效率",
+	"luna_flesh_reforged.tooltips.archotech_kidney.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_kidney.2": "法术冷却缩减",
+	"luna_flesh_reforged.tooltips.archotech_liver.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_liver.2": "暴击概率",
+	"luna_flesh_reforged.tooltips.archotech_lung.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_lung.2": "最大生命值",
+	"luna_flesh_reforged.tooltips.stoneskin_gland.0": "能分泌一种使皮肤硬化的激素的腺体，但会降低敏捷程度",
+	"luna_flesh_reforged.tooltips.stoneskin_gland.1": "激活后提高",
+	"luna_flesh_reforged.tooltips.stoneskin_gland.2": "护甲值",
+	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.0": "能与超凡器官共鸣并生成特殊物质强化皮肤坚韧程度的腺体",
+	"luna_flesh_reforged.tooltips.organlink_per.1": "每存在一种类为",
+	"luna_flesh_reforged.tooltips.organlink_per.2": "的器官，会为你额外添加",
+	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.1": "护甲值",
+	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.2": "激活后提高",
+	"luna_flesh_reforged.tooltips.archotech_toughskin_gland.3": "盔甲韧性",
+	"luna_flesh_reforged.tooltips.psylink_neuro.0": "一种蕴含着超凡之力的神经链接装置，能赋予植入者心灵的力量",
+	"luna_flesh_reforged.tooltips.psylink_neuro.1": "最大法力值",
+	"luna_flesh_reforged.tooltips.psylink_neuro.2": "法术冷却缩减与咒文效力",
+	"luna_flesh_reforged.tooltips.psylink_neuro.3": "激活后提高",
+	"luna_flesh_reforged.tooltips.psylink_neuro.4a": "高速神言、",
+	"luna_flesh_reforged.tooltips.psylink_neuro.5a": "咒文效力与法力回复",
+	"luna_flesh_reforged.tooltips.psylink_neuro.4b": "高速神言与法力回复、",
+	"luna_flesh_reforged.tooltips.psylink_neuro.5b": "咒文效力",
+	"luna_flesh_reforged.tooltips.enchanted_psylink_neuro.1": "根据胸腔内超凡器官的数量提升超限施法等级",
+	"luna_flesh_reforged.tooltips.archotech_lastinger.0": "你就当它真是阑尾",
+	"luna_flesh_reforged.tooltips.lights_bane.0": "被暗影与虚空之力转化的遗物，其真名是对光芒的禁令",
+	"luna_flesh_reforged.tooltips.lights_bane.1": "对处于发光状态的目标造成伤害时",
+	"luna_flesh_reforged.tooltips.radiance_reaper.0": "被光辉之力转化的遗物，其真名是源自辉光的标记",
+	"luna_flesh_reforged.tooltips.radiance_reaper.1": "使用武器大师的镰刀造成伤害时给予目标",
+	"luna_flesh_reforged.tooltips.radiance_reaper.2": "发光&虚弱",
+	"luna_flesh_reforged.tooltips.radiance_reaper.3": "效果",
+	"luna_flesh_reforged.tooltips.radiance_reaper.4": "使用武器大师的镰刀造成伤害时给予自身",
+	"luna_flesh_reforged.tooltips.radiance_reaper.5": "急迫",
+	"luna_flesh_reforged.tooltips.chromatic_rose_heart.0": "被异彩之力晋升的无机心脏，其真名是混合的色彩",
+	"luna_flesh_reforged.tooltips.lager_bone_soul.0": "被光辉与暗影之力转化的遗物，其真名是混沌的触摸",
+	"luna_flesh_reforged.tooltips.lager_bone_soul.1": "使用武器大师的戟造成伤害时",
+	"luna_flesh_reforged.tooltips.lager_bone_soul.2": "的概率在接下来6秒内",
+	"luna_flesh_reforged.tooltips.lager_bone_soul.3": "+2攻击距离",
+	"luna_flesh_reforged.tooltips.tonly.0": "此效果唯一",
+	"luna_flesh_reforged.tooltips.archotech": "超凡",
+	"luna_flesh_reforged.tooltips.chromatic": "异彩",
+	"luna_flesh_reforged.tooltips.archotech_warden_core.1": "深渊的回响化作巫术的力量",
+	"luna_flesh_reforged.tooltips.archotech_warden_core.2": "使用主动技能按键消耗500法力值，释放§6超限:音爆",
+	"luna_flesh_reforged.tooltips.archotech_warden_core.3": "使用者的最大法力值越多，音爆技能的超限等级越高",
+	"luna_flesh_reforged.tooltips.archotech_warden_core.4": "释放时法力值不足500将消耗生命值补全法力需求，不致死（需要先学会该法术，否则无法使用器官能力）",
+	"luna_flesh_reforged.tooltips.archotech_warden_core.5": "激活时提供100法力上限",
+	"luna_flesh_reforged.tooltips.infested_organ_distortion.1": "Technocyte病毒进一步感染了这种扭曲的器官……欢迎加入Infestation，“我们的血肉”……",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.1": "激活时每存在一个§6感染§7器官，得到1 §6Infestation计数",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.2": "设Infestation计数为n，提升§6(√n)*((3)√n)*3§7点生命值或§62n§7点生命值（取高值）"
 }
