更新一些贴图

--- a/kubejs/assets/luna_flesh_reforged/lang/zh_cn.json
+++ b/kubejs/assets/luna_flesh_reforged/lang/zh_cn.json
@@ -1,17 +1,41 @@
 {
+	"luna_flesh_reforged":"Luna的扩充包",
 	"key.categories.luna_flesh_reforged": "Luna的扩充包",
 	"itemGroup.kubejs.lunadlc": "Luna的扩充包",
+	"item.luna_flesh_reforged.flesheating_infection_fiber": "噬肉感染纤维",
+	"item.luna_flesh_reforged.ectoplasm_wooden_shard": "灵质木碎片",
 	"item.luna_flesh_reforged.incomplete_archotech_framework": "未完成的框架",
 	"item.luna_flesh_reforged.incomplete_archotech_capsule": "转化中的超凡立方",
+	"item.luna_flesh_reforged.incomplete_archotech_adrenaline": "实验型超凡肾上腺素",
 	"item.luna_flesh_reforged.crimson_substance": "绯红物质",
 	"item.luna_flesh_reforged.warped_substance": "诡异物质",
 	"item.luna_flesh_reforged.infected_flesh": "感染肉块",
 	"item.luna_flesh_reforged.enchanted_infected_flesh": "感染肉块",
 	"item.luna_flesh_reforged.nano_plastids": "纳米生物质",
 	"item.luna_flesh_reforged.stardust_core": "星尘核心",
+	"item.luna_flesh_reforged.irradiant_stardust_fragment": "辐照星尘碎片",
 	"item.luna_flesh_reforged.archotech_framework": "超凡框架",
 	"item.luna_flesh_reforged.archotech_cube": "超凡立方",
 	"item.luna_flesh_reforged.archotech_capsule": "超凡胶囊",
+	"item.luna_flesh_reforged.archotech_adrenaline": "超凡肾上腺素",
+	"item.luna_flesh_reforged.zombie_brain": "僵尸之脑",
+	"item.luna_flesh_reforged.purifying_bath_salts": "净化浴盐",
+	"item.luna_flesh_reforged.sanitizing_soap": "祛邪肥皂",
+	"item.luna_flesh_reforged.sanity_checker": "神智检测仪",
+	"item.luna_flesh_reforged.mini_silverwood": "微缩银树",
+	"item.luna_flesh_reforged.silverwood_heart": "银树之心",
+	"item.luna_flesh_reforged.silverheart_charm": "银树树心容器",
+	"luna_flesh_reforged.tooltips.sanitizing_soap.0": "真正的清洁不仅仅是清洗肉体上的污垢，还能对你的精神世界产生效果",
+	"luna_flesh_reforged.tooltips.sanitizing_soap.1": "潜行时右键可以直接使用净化浴盐",
+	"luna_flesh_reforged.tooltips.sanitizing_soap.2": "此时根据你的幸运和扭曲程度有概率降低你的扭曲",
+	"luna_flesh_reforged.tooltips.sanitizing_soap.3": "不能通过这种方式将扭曲降至12以下",
+	"luna_flesh_reforged.tooltips.silverwood_heart.0": "带来洁净的灵气的树木创造的心脏，可以抑制扭曲的力量",
+	"luna_flesh_reforged.tooltips.silverwood_heart.1": "持续给予自身§扭曲守护",
+	"luna_flesh_reforged.tooltips.sanity_checker.0": "§9[神智检测仪]§7当前扭曲值/最大扭曲值：",
+	"item.luna_flesh_reforged.abyssalwarlock_eye": "深渊魔契之眼",
+	"item.luna_flesh_reforged.archotech_abyssal_core": "超凡深渊聚晶",
+	"item.luna_flesh_reforged.warped_battery": "位能电池",
+	"item.luna_flesh_reforged.eldritch_hammer": "邪术之锤",
 	"item.luna_flesh_reforged.archotech_lung": "超凡肺脏",
 	"item.luna_flesh_reforged.archotech_muscle": "超凡肌肉",
 	"item.luna_flesh_reforged.archotech_heart": "超凡心脏",
@@ -23,18 +47,29 @@
 	"item.luna_flesh_reforged.archotech_kidney": "超凡肾脏",
 	"item.luna_flesh_reforged.archotech_liver": "超凡肝脏",
 	"item.luna_flesh_reforged.archotech_appendix": "超凡阑尾",
-	"item.luna_flesh_reforged.stoneskin_gland": "石肤腺体",
+	"item.luna_flesh_reforged.dragon_heartstring": "龙心弦",
 	"item.luna_flesh_reforged.archotech_toughskin_gland": "超凡韧肤腺体",
+	"item.luna_flesh_reforged.archotech_toughspine": "超凡坚韧脊柱",
+	"item.luna_flesh_reforged.archotech_doublerib_left": "超凡双重左肋骨",
+	"item.luna_flesh_reforged.archotech_doublerib_right": "超凡双重右肋骨",
+	"item.luna_flesh_reforged.archotech_kidney_left": "超凡仿生肾（左）",
+	"item.luna_flesh_reforged.archotech_kidney_right": "超凡仿生肾（右）",
 	"item.luna_flesh_reforged.psylink_neuro": "启灵神经",
 	"item.luna_flesh_reforged.enchanted_psylink_neuro": "觉醒启灵神经",
 	"item.luna_flesh_reforged.archotech_lastinger": "超凡激活者",
 	"item.luna_flesh_reforged.archotech_mana_reactor": "超凡魔力反应结构",
+	"item.luna_flesh_reforged.archotech_magic_digestive_system": "超凡魔能消化系统",
 	"item.luna_flesh_reforged.archotech_dragon_appendix": "超凡龙胆",
+	"item.luna_flesh_reforged.jump_second_spiritual_heart": "跃动灵能心脏",
 	"item.luna_flesh_reforged.archotech_warden_core": "超凡回响核心",
+	"item.luna_flesh_reforged.stoneskin_gland": "石肤腺体",
+	"item.luna_flesh_reforged.chromatic_rose_heart": "异彩玫瑰之心",
+	"item.luna_flesh_reforged.chromatic_rose_muscle": "异彩玫瑰肌肉",
+	"item.luna_flesh_reforged.ender_bottle_max": "末影满装瓶",
 	"item.luna_flesh_reforged.lights_bane": "光之驱逐",
 	"item.luna_flesh_reforged.radiance_reaper": "辉光收割者",
-	"item.luna_flesh_reforged.chromatic_rose_heart": "异彩玫瑰之心",
 	"item.luna_flesh_reforged.lager_bone_soul": "画戟魂骨",
+	"item.luna_flesh_reforged.variable_speed_gear": "变速齿轮",
 	"item.luna_flesh_reforged.infested_lung": "感染肺脏",
 	"item.luna_flesh_reforged.infested_muscle": "感染肌肉",
 	"item.luna_flesh_reforged.infested_heart": "感染心脏",
@@ -46,8 +81,12 @@
 	"item.luna_flesh_reforged.infested_kidney": "感染肾脏",
 	"item.luna_flesh_reforged.infested_liver": "感染肝脏",
 	"item.luna_flesh_reforged.infested_appendix": "感染胆囊",
+	"item.luna_flesh_reforged.nightvision_cholecyst": "夜视胆囊",
 	"item.luna_flesh_reforged.infested_heart_distortion": "畸变Infested心脏",
-	"effect.kubejs.lunatouch_attack": "攻击距离提升",
+	"item.luna_flesh_reforged.infested_spine_distortion": "畸变Infested骸骨",
+	"item.luna_flesh_reforged.infested_stomach_distortion": "畸变Infested捕食者",
+	"luna_flesh_reforged.tooltips.dragon_heartstring.1": "传闻是一种能够提升使用者施法速度和强度的魔杖杖芯材料",
+	"luna_flesh_reforged.tooltips.dragon_heartstring.2": "激活时提高0.01§6咒文效力§7、§6冷却缩减§7、§6吟唱缩减",
 	"luna_flesh_reforged.tooltips.infested_organ.1": "被邪恶之物感染的畸形器官",
 	"luna_flesh_reforged.tooltips.archotech_framework.1": "将科技的最高结晶组合的结果，但似乎还不足以蜕变",
 	"luna_flesh_reforged.tooltips.archotech_cube.1": "通过神秘的手段创造的奇特方块，没有人知道内部究竟是什么结构",
@@ -93,6 +132,37 @@
 	"luna_flesh_reforged.tooltips.psylink_neuro.5b": "咒文效力",
 	"luna_flesh_reforged.tooltips.enchanted_psylink_neuro.1": "根据胸腔内超凡器官的数量提升超限施法等级",
 	"luna_flesh_reforged.tooltips.archotech_lastinger.0": "你就当它真是阑尾",
+	"luna_flesh_reforged.tooltips.archotech_magic_digestive_system.1": "当体内超凡器官不低于5且消化系统器官(肠/胃)不大于3(第二个本器官计为2)时：",
+	"luna_flesh_reforged.tooltips.archotech_magic_digestive_system.2": "右键§6奥术源质§7时消耗整组物品提供§6熔炉供能§7效果(持续恢复饱食/饱和)；等级为魔法器官数量(最高V)，时长为物品数量，并回×5复法力",
+	"luna_flesh_reforged.tooltips.archotech_kidney_left.1": "若在左右对称的位置放置有§6超凡仿生肾（右）§7，且体内具有§6超凡肌肉§7则：",
+	"luna_flesh_reforged.tooltips.archotech_kidney_left.2": "提升§6超凡肌肉数量×1.5§7的攻击力",
+	"luna_flesh_reforged.tooltips.archotech_kidney_right.1": "若在左右对称的位置放置有§6超凡仿生肾（左）§7，且体内具有§6超凡肌肉§7则：",
+	"luna_flesh_reforged.tooltips.archotech_kidney_right.2": "提升§6当前神经效率×2%+超凡肌肉数量×3%§7的攻击力（独立乘区）",
+	"luna_flesh_reforged.tooltips.archotech_kidney_right.3": "来自超凡肌肉的攻击力提升最高为24%（独立乘区）",
+	"luna_flesh_reforged.tooltips.jump_second_spiritual_heart.0": "一团还在跳动的形似心脏的魔力聚合物，但不被认为是正常的心脏",
+	"luna_flesh_reforged.tooltips.jump_second_spiritual_heart.1": "激活时如果有其他心脏，则提升4点最大生命值",
+	"luna_flesh_reforged.tooltips.jump_second_spiritual_heart.2": "激活后全系单系法术强度-25%，基础法术强度+50%（独立乘区）",
+	"luna_flesh_reforged.tooltips.jump_second_spiritual_heart.3": "使用Iron的咒语造成法术伤害时，将胸腔中最高的属性的数值加入结算伤害",
+	"luna_flesh_reforged.tooltips.jump_second_spiritual_heart.4": "这个效果无法使法术伤害突破原先的150%",
+	"luna_flesh_reforged.tooltips.abyssalwarlock_eye.0": "与伟大存在结缔契约的证明（存疑）",
+	"luna_flesh_reforged.tooltips.abyssalwarlock_eye.1": "激活时提高0.025§6咒文效力§7、§6冷却缩减§7、§6吟唱缩减",
+	"luna_flesh_reforged.tooltips.abyssalwarlock_eye.2": "能够将§6法术：巫术爆破§7转化为§6魔能爆",
+	"luna_flesh_reforged.tooltips.abyssalwarlock_eye.3": "§6魔能爆§7无视目标的无敌帧，但面对神恩免疫会失去此效果并转化为indirectMagic伤害（如部分诡厄巫法法术和原版药水伤害）",
+	"luna_flesh_reforged.tooltips.abyssalwarlock_eye.4": "§6魔能爆§7的伤害由当前扭曲值决定，如果扭曲为0只能造成50%的伤害",
+	"luna_flesh_reforged.tooltips.archotech_abyssal_core.0": "虚空、邪术、扭曲、超凡……",
+	"luna_flesh_reforged.tooltips.archotech_abyssal_core.1": "激活时提高0.05§6咒文效力§7、§6冷却缩减§7、§6吟唱缩减",
+	"luna_flesh_reforged.tooltips.archotech_abyssal_core.2": "激活时提高10%§6法力上限",
+	"luna_flesh_reforged.tooltips.archotech_abyssal_core.3": "能够将§6法术：巫术爆破§7转化为§6魔能爆§7，并使§6魔能爆§7基础伤害提升相当于§6神经效率§7的数值同时造成额外的indirectMagic伤害；同时给予目标1s侵蚀效果，并有概率使侵蚀等级提升1",
+	"luna_flesh_reforged.tooltips.archotech_abyssal_core.4": "间接魔法伤害能无视目标的无敌帧，且若体内存在§6超凡回响核心§7时所有回响（巫术）学派法术同样造成额外的indirectMagic伤害，并且使得在扭曲大于75时魔能爆命中具有侵蚀效果的目标时给予地缚效果",
+	"luna_flesh_reforged.tooltips.archotech_abyssal_core.5": "根据当前扭曲值提升indirectMagic伤害与音爆伤害；若扭曲大于80则§6魔能爆§7会造成额外的伤害并概率减少1扭曲",
+	"luna_flesh_reforged.tooltips.warped_battery.0": "事实证明，不可名状的伟大者的力量就连机械也会被侵蚀……亦或者就连机械也在祂们的领域之中……",
+	"luna_flesh_reforged.tooltips.warped_battery.1": "激活后提供§625资源上限",
+	"luna_flesh_reforged.tooltips.warped_battery.2": "激活时扭曲大于§612/24/40/60/80§7时",
+	"luna_flesh_reforged.tooltips.warped_battery.3": "提供的资源上限§6×2/4/6/8/10",
+	"luna_flesh_reforged.tooltips.warped_battery.4": "每分钟额外提供相当于当前扭曲值的资源点数",
+	"luna_flesh_reforged.tooltips.warped_battery.5": "在扭曲守护的状态下无效",
+	"luna_flesh_reforged.tooltips.eldritch_hammer.1": "按下主动键后消耗20法力发动1级§6幽冥锤§7（不可被超限）",
+	"luna_flesh_reforged.tooltips.eldritch_hammer.2": "扭曲越高冷却时间越低，80扭曲以上无视冷却时间与当前法力",
 	"luna_flesh_reforged.tooltips.lights_bane.0": "被暗影与虚空之力转化的遗物，其真名是对光芒的禁令",
 	"luna_flesh_reforged.tooltips.lights_bane.1": "对处于发光状态的目标造成伤害时",
 	"luna_flesh_reforged.tooltips.radiance_reaper.0": "被光辉之力转化的遗物，其真名是源自辉光的标记",
@@ -102,22 +172,76 @@
 	"luna_flesh_reforged.tooltips.radiance_reaper.4": "使用武器大师的镰刀造成伤害时给予自身",
 	"luna_flesh_reforged.tooltips.radiance_reaper.5": "急迫",
 	"luna_flesh_reforged.tooltips.chromatic_rose_heart.0": "被异彩之力晋升的无机心脏，其真名是混合的色彩",
+	"luna_flesh_reforged.tooltips.chromatic_rose_heart.1": "（唯一化）",
+	"luna_flesh_reforged.tooltips.chromatic_rose_muscle.0": "用异彩之力锻造的肌肉纤维，其真名是幻想的颜色",
 	"luna_flesh_reforged.tooltips.lager_bone_soul.0": "被光辉与暗影之力转化的遗物，其真名是混沌的触摸",
 	"luna_flesh_reforged.tooltips.lager_bone_soul.1": "使用武器大师的戟造成伤害时",
 	"luna_flesh_reforged.tooltips.lager_bone_soul.2": "的概率在接下来6秒内",
 	"luna_flesh_reforged.tooltips.lager_bone_soul.3": "+2攻击距离",
+	"luna_flesh_reforged.tooltips.ender_bottle_max.1": "末影能量！",
+	"luna_flesh_reforged.tooltips.variable_speed_gear.0": "才不是开了作弊软件！",
+	"luna_flesh_reforged.tooltips.variable_speed_gear.1": "攻击或受伤时有§6机械器官数量×2%+5%§7的概率赋予自身§6急迫&速度2",
+	"luna_flesh_reforged.tooltips.variable_speed_gear.2": "当处于熔火/心火状态下，变为§6急迫&速度5",
+	"luna_flesh_reforged.tooltips.variable_speed_gear.3": "若胸腔内有§6机械发条§7，且变速齿轮位置在其之后，则在急迫或速度状态下不会自然衰减资源点",
 	"luna_flesh_reforged.tooltips.tonly.0": "此效果唯一",
 	"luna_flesh_reforged.tooltips.archotech": "超凡",
 	"luna_flesh_reforged.tooltips.chromatic": "异彩",
+	"luna_flesh_reforged.tooltips.spell_resist": "法术抗性",
 	"luna_flesh_reforged.tooltips.archotech_warden_core.1": "深渊的回响化作巫术的力量",
 	"luna_flesh_reforged.tooltips.archotech_warden_core.2": "使用主动技能按键消耗500法力值，释放§6超限:音爆",
 	"luna_flesh_reforged.tooltips.archotech_warden_core.3": "使用者的最大法力值越多，音爆技能的超限等级越高",
 	"luna_flesh_reforged.tooltips.archotech_warden_core.4": "释放时法力值不足500将消耗生命值补全法力需求，不致死（需要先学会该法术，否则无法使用器官能力）",
 	"luna_flesh_reforged.tooltips.archotech_warden_core.5": "激活时提供100法力上限",
+	"luna_flesh_reforged.tooltips.nightvision_cholecyst.1": "持续给予夜视效果",
 	"luna_flesh_reforged.tooltips.infested_organ_distortion.1": "Technocyte病毒进一步感染了这种扭曲的器官……欢迎加入Infestation，“我们的血肉”……",
-	"luna_flesh_reforged.tooltips.infested_heart_distortion.1": "激活时每存在一个§6感染§7器官，得到1 §6Infestation计数",
-	"luna_flesh_reforged.tooltips.infested_heart_distortion.2": "设Infestation计数为n，提升§6(√n)*((3)√n)*3§7点生命值或§62n§7点生命值（取高值）",
+	"luna_flesh_reforged.tooltips.infested_organ_distortion.2": "依赖§6畸变Infested心脏§7提供的§6Infestation计数§7激活特殊效果",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.0": "每存在一个§6感染§7器官，得到 1 §6Infestation计数§7， §6Infestation计数可用于感染器官的激活能力（唯一）",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.1": "每存在一个§6感染§7器官，得到 1 §6Infestation计数§7； 激活时根据§6Infestation计数获得加成：",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.2": "设Infestation计数为n，提升§6(√n)*((3)√n)*3§7点生命值或§62n§7点生命值（取高）",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.3": "同时会导致胸腔的火焰抗性属性即使通过海晶王冠也不能超过0",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.4": "身上存在一分钟以上的防火效果时，该buff将会消失",
+	"luna_flesh_reforged.tooltips.infested_stomach_distortion.1": "造成10点以上的近战伤害时，根据§6Infestation计数§7有概率一定的饱食与饱和度",
+	"luna_flesh_reforged.tooltips.infested_stomach_distortion.2": "击杀生物时，根据§6Infestation计数§7和目标生命恢复大量饱食度",
+	"luna_flesh_reforged.tooltips.infested_spine_distortion.1": "§6Infestation计数§7不为0时，使得受到的伤害不会超过自身生命上限的1/2",
+	"luna_flesh_reforged.tooltips.infested_spine_distortion.2": "Infestation计数到达5时提升至1/3；Infestation计数到达5且最大生命值大于100时提升至1/4；Infestation计数到达10且最大生命值大于100时提升至1/5",
+	"luna_flesh_reforged.tooltips.infested_spine_distortion.3": "着火时无效；装备焰护之戒时持续受到伤害",
+	"tetra.material.luna_ectoplasm_wooden_shard": "灵质木",
+	"tetra.material.luna_ectoplasm_wooden_shard.prefix": "灵质木",
+	"tetra.material.luna_flesheating_infection_fiber": "噬肉纤维",
+	"tetra.material.luna_flesheating_infection_fiber.prefix": "噬肉纤维",
 	"luna_flesh_reforged.tooltips.operation_box.1": "只有这种手术盒可以正常加载LunaDLC的激活器官（可随时与原版形态间切换）",
+
+    "luna_flesh_reforged.jei.greatone_charm.1": "以血色的墨描绘着象征不可名状的伟大者的符号的符咒，每种符咒都可以在古城、下界、墓园的箱子中以0.5%的几率开出",
+    "luna_flesh_reforged.jei.zombie_brain.1": "10%的概率在击败僵尸后掉落，食用可以一定程度上缓解身上的反常之饥效果，但可能会增加扭曲",
+    "luna_flesh_reforged.jei.purifying_bath_salts.1": "使用后给予扭曲守护效果。",
+
+	"effect.luna_flesh_reforged.lunatouch_attack": "攻击距离提升",
+	"effect.luna_flesh_reforged.warpward": "扭曲守护",
+	"effect.luna_flesh_reforged.warpward.description": "阻止扭曲的发生",
+	"effect.luna_flesh_reforged.unnatural_hunger": "反常之饥",
+	"effect.luna_flesh_reforged.unnatural_hunger.description": "你感到异常饥饿，但普通的食物并不能让你满足……",
+	"effect.luna_flesh_reforged.deathgaze": "死亡凝视",
+	"effect.luna_flesh_reforged.deathgaze.description": "原始的恶意从你的视线中投射而出，给予注视的目标以凋零的效果",
+
+	"luna_flesh_reforged.msg.warphappen.1": "古怪的耳语向你倾吐着秘密",
+	"luna_flesh_reforged.msg.warphappen.2": "那片嘈杂声是怎么回事？有什么东西在尾随……",
+	"luna_flesh_reforged.msg.warphappen.3": "忽然之间你身上涌出古怪的疲乏感",
+	"luna_flesh_reforged.msg.warphappen.4": "你的胃突然发出异常奇怪的咕噜声",
+	"luna_flesh_reforged.msg.warphappen.5": "突如其来的反常饥饿感让你感到劳累",
+	"luna_flesh_reforged.msg.warphappen.6": "有东西在尾随你",
+	"luna_flesh_reforged.msg.warphappen.7": "浓雾凭空而生，其间鬼影绰绰",
+	"luna_flesh_reforged.msg.warphappen.8": "眼前的世界忽然变得模糊",
+	"luna_flesh_reforged.msg.warphappen.9": "光线突然变得不可抗拒地明亮了起来，你的皮肤燃烧起来",
+	"luna_flesh_reforged.msg.warphappen.10": "你突然间厌倦了破坏",
+	"luna_flesh_reforged.msg.warphappen.11": "你的感觉猛地膨胀开来",
+	"luna_flesh_reforged.msg.warphappen.12": "你的视野变得诡异而模糊",
+	"luna_flesh_reforged.msg.warphappen.13": "它们无处不在，快跑",
+	"luna_flesh_reforged.msg.warphappen.14": "冥冥之中一道目光注视着你，或许该罢手了",
+	"luna_flesh_reforged.msg.warphappen.15": "有那么一瞬间你感到头脑无比清晰",
+	"luna_flesh_reforged.msg.warphappen.16": "你的视野突然变得诡异而模糊",
+	"luna_flesh_reforged.msg.warphappen.17": "那微弱的咏唱声在附近依稀可闻",
+
+
 	"luna_flesh_reforged.tooltips.ghost_ingot.0":"仅有坟土生成的幽灵掉落",
 	"luna_flesh_reforged.tooltips.unholy_grail.0":"不是神秘遗物！需要配合器官“禁忌之果”使用",
 	"luna_flesh_reforged.tooltips.chicken_flavor_powder.0":"在维度地牢的奖励箱中获得",
@@ -129,5 +253,6 @@
 	"luna_flesh_reforged.tooltips.phantoplasm.0":"由迎战的BOSS§6敲钟人§7掉落",
 	"luna_flesh_reforged.tooltips.fortunes_favor.0":"由迎战的BOSS§6福尔图娜女爵§7掉落",
 	"luna_flesh_reforged.tooltips.mossy_tooth.0":"由迎战的BOSS§6沼泽巨颚怪§7掉落",
-	"luna_flesh_reforged.tooltips.violet_bloom.0":"由迎战的BOSS§6薄暮之锋，罗莎琳§7掉落"
+	"luna_flesh_reforged.tooltips.violet_bloom.0":"由迎战的BOSS§6薄暮之锋，罗莎琳§7掉落",
+	"luna_flesh_reforged.tooltips.chad_bolus.0":"书卷之龙消化不良的呕吐物"
 }
