--- a/kubejs/assets/luna_flesh_reforged/lang/zh_cn.json
+++ b/kubejs/assets/luna_flesh_reforged/lang/zh_cn.json
@@ -30,7 +30,7 @@
 	"luna_flesh_reforged.tooltips.sanitizing_soap.2": "此时根据你的幸运和扭曲程度有概率降低你的扭曲",
 	"luna_flesh_reforged.tooltips.sanitizing_soap.3": "不能通过这种方式将扭曲降至12以下",
 	"luna_flesh_reforged.tooltips.silverwood_heart.0": "带来洁净的灵气的树木创造的心脏，可以抑制扭曲的力量",
-	"luna_flesh_reforged.tooltips.silverwood_heart.1": "持续给予自身§扭曲守护",
+	"luna_flesh_reforged.tooltips.silverwood_heart.1": "持续给予自身§6扭曲守护",
 	"luna_flesh_reforged.tooltips.sanity_checker.0": "§9[神智检测仪]§7当前扭曲值/最大扭曲值：",
 	"item.luna_flesh_reforged.abyssalwarlock_eye": "深渊魔契之眼",
 	"item.luna_flesh_reforged.archotech_abyssal_core": "超凡深渊聚晶",
@@ -85,6 +85,16 @@
 	"item.luna_flesh_reforged.infested_heart_distortion": "畸变Infested心脏",
 	"item.luna_flesh_reforged.infested_spine_distortion": "畸变Infested骸骨",
 	"item.luna_flesh_reforged.infested_stomach_distortion": "畸变Infested捕食者",
+	"item.luna_flesh_reforged.llama_in_chestcavity": "胸中羊驼",
+	"item.luna_flesh_reforged.tnt_in_chestcavity": "TNT",
+	"item.luna_flesh_reforged.dirt_in_chestcavity": "泥土",
+	"luna_flesh_reforged.tooltips.llama_in_chestcavity.1": "才不是草泥马",
+	"luna_flesh_reforged.tooltips.llama_in_chestcavity.2": "激活时每有1个肺，提升自身1点强力口水",
+	"luna_flesh_reforged.tooltips.llama_in_chestcavity.3": "强力口水冷却期间，将口水伤害提升为胸腔属性 强力口水×肺活量 之积",
+	"luna_flesh_reforged.tooltips.tnt_in_chestcavity.1": "自爆卡车！",
+	"luna_flesh_reforged.tooltips.tnt_in_chestcavity.2": "激活时将爆炸属性提升为胸腔内全部正数属性之和",
+	"luna_flesh_reforged.tooltips.dirt_in_chestcavity.1": "它真能当器官？",
+	"luna_flesh_reforged.tooltips.dirt_in_chestcavity.2": "激活时根据胸腔中的泥土数量提升胸腔属性下限； 当胸腔内装满泥土时获得相当于正常人的属性。",
 	"luna_flesh_reforged.tooltips.dragon_heartstring.1": "传闻是一种能够提升使用者施法速度和强度的魔杖杖芯材料",
 	"luna_flesh_reforged.tooltips.dragon_heartstring.2": "激活时提高0.01§6咒文效力§7、§6冷却缩减§7、§6吟唱缩减",
 	"luna_flesh_reforged.tooltips.infested_organ.1": "被邪恶之物感染的畸形器官",
@@ -195,8 +205,9 @@
 	"luna_flesh_reforged.tooltips.nightvision_cholecyst.1": "持续给予夜视效果",
 	"luna_flesh_reforged.tooltips.infested_organ_distortion.1": "Technocyte病毒进一步感染了这种扭曲的器官……欢迎加入Infestation，“我们的血肉”……",
 	"luna_flesh_reforged.tooltips.infested_organ_distortion.2": "依赖§6畸变Infested心脏§7提供的§6Infestation计数§7激活特殊效果",
+	"luna_flesh_reforged.tooltips.infested_organ_distortion.3": "激活时若§6Infestation计数§7大于4则提升§6 4§7 点生命上限",
 	"luna_flesh_reforged.tooltips.infested_heart_distortion.0": "每存在一个§6感染§7器官，得到 1 §6Infestation计数§7， §6Infestation计数可用于感染器官的激活能力（唯一）",
-	"luna_flesh_reforged.tooltips.infested_heart_distortion.1": "每存在一个§6感染§7器官，得到 1 §6Infestation计数§7； 激活时根据§6Infestation计数获得加成：",
+	"luna_flesh_reforged.tooltips.infested_heart_distortion.1": "每存在一个§6感染§7器官，得到 1 §6Infestation计数§7（唯一）； 激活时根据§6Infestation计数获得加成：",
 	"luna_flesh_reforged.tooltips.infested_heart_distortion.2": "设Infestation计数为n，提升§6(√n)*((3)√n)*3§7点生命值或§62n§7点生命值（取高）",
 	"luna_flesh_reforged.tooltips.infested_heart_distortion.3": "同时会导致胸腔的火焰抗性属性即使通过海晶王冠也不能超过0",
 	"luna_flesh_reforged.tooltips.infested_heart_distortion.4": "身上存在一分钟以上的防火效果时，该buff将会消失",
