--- a/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
+++ b/kubejs/assets/mrqx_extra_pack/lang/zh_cn.json
@@ -64,7 +64,7 @@
     "item.mrqx_extra_pack.mage_control_strong": "“法师控制强”",
     "item.mrqx_extra_pack.magic_fast_charging_cpu": "魔能速充处理器",
     "item.mrqx_extra_pack.magic_glass_cannon_cpu": "魔能“玻璃大炮”处理器",
-    "item.mrqx_extra_pack.magic_overload_cpu": "魔能过载处理器",
+    "item.mrqx_extra_pack.magic_overload_cpu": "魔能速射处理器",
     "item.mrqx_extra_pack.malignant_tumor": "恶性肿瘤",
     "item.mrqx_extra_pack.marenol": "噩梦醇",
     "item.mrqx_extra_pack.mini_end_crystal": "迷你末地水晶",
@@ -153,16 +153,16 @@
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.05": "剩余可提供资源点数：",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.1": "资源值：",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.2": "扭曲值：",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.3": "甜蜜之梦:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.4": "龙化:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.5": "无尽节律:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.60": "熔火:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.61": "心火:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.7": "死狱之魂:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.8": "山月之魂:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.9": "噩梦醇:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a0": "核能动力:",
-    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a1": "核能发电:",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.3": "甜蜜之梦：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.4": "龙化：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.5": "无尽节律：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.60": "熔火：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.61": "心火：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.7": "死狱之魂：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.8": "山月之魂：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.9": "噩梦醇：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a0": "核能动力：",
+    "mrqx_extra_pack.text.advancedArchivistEyeGlass.a1": "核能发电：",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.b0": "末影损伤：",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.b1": "灼燃损伤：",
     "mrqx_extra_pack.text.advancedArchivistEyeGlass.b2": "冻结损伤：",
@@ -175,11 +175,11 @@
     "mrqx_extra_pack.tooltips.activated_giant_tumor.5": "最大生命值减少（1-缺少个数数×0.12）%",
     "mrqx_extra_pack.tooltips.active_ender_dragon_bead.1": "此世唯一之龙",
     "mrqx_extra_pack.tooltips.active_ender_dragon_bead.2": "造成伤害时，额外造成等同于伤害值的§5末影损伤§r",
-    "mrqx_extra_pack.tooltips.active_ender_dragon_bead.3": "§5末影损伤§r达到100时，消耗100§5末影损伤§r使其额外受到100点龙息伤害（不致死，不受额外加成影响），并使其获得10s的§5深渊烧灼§r、§5深渊恐惧§r、§5末影流感§r",
+    "mrqx_extra_pack.tooltips.active_ender_dragon_bead.3": "§5末影损伤§r达到100时，消耗100§5末影损伤§r使其额外受到100点龙息伤害（不致死，不受额外加成影响），并使其获得10s的§5深渊烧灼§r、§5深渊恐惧§r、§5极度恐惧§r",
     "mrqx_extra_pack.tooltips.active_ender_dragon_bead.4": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
     "mrqx_extra_pack.tooltips.active_fire_dragon_bead.1": "火龙之力常伴与你",
     "mrqx_extra_pack.tooltips.active_fire_dragon_bead.2": "造成伤害时，额外造成等同于伤害值的§c灼燃损伤§r",
-    "mrqx_extra_pack.tooltips.active_fire_dragon_bead.3": "§c灼燃损伤§r达到100时，消耗100§c灼燃损伤§r使其额外受到100点岩浆伤害（不致死，不受额外加成影响），并使其获得10s的§c燃烧§r、§c灼烧魔印§r、§c炽热烙印§r",
+    "mrqx_extra_pack.tooltips.active_fire_dragon_bead.3": "§c灼燃损伤§r达到100时，消耗100§c灼燃损伤§r使其额外受到100点岩浆伤害（不致死，不受额外加成影响），并使其获得10s的§c助燃性§r、§c灼烧魔印§r、§c炽热烙印§r",
     "mrqx_extra_pack.tooltips.active_fire_dragon_bead.4": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
     "mrqx_extra_pack.tooltips.active_ice_dragon_bead.1": "冰龙之力常伴与你",
     "mrqx_extra_pack.tooltips.active_ice_dragon_bead.2": "造成伤害时，额外造成等同于伤害值的§b冻结损伤§r",
@@ -229,8 +229,8 @@
     "mrqx_extra_pack.tooltips.crispy_belly.1": "脆肚好吃",
     "mrqx_extra_pack.tooltips.crispy_belly.2": "……翠杜？",
     "mrqx_extra_pack.tooltips.dark_sun_seed.1": "暗无天日",
-    "mrqx_extra_pack.tooltips.dark_sun_seed.2": "激活后，增加§e(光合 ÷ (护甲值 + 1) × 扭曲值 × 0.1)§r攻击力乘数，按键技能的伤害也会乘以这个值",
-    "mrqx_extra_pack.tooltips.dark_sun_seed.3": "使用主动技能按键释放§6辐射§r，对附近的其他生物持续造成无视无敌时间的3点伤害",
+    "mrqx_extra_pack.tooltips.dark_sun_seed.2": "激活后，按键技能的伤害乘以§e(光合 ÷ (护甲值 + 1) × 扭曲值 × 0.1)§r",
+    "mrqx_extra_pack.tooltips.dark_sun_seed.3": "使用主动技能按键释放辐射，对附近的其他生物持续造成攻击力5%且无视无敌时间的真实伤害",
     "mrqx_extra_pack.tooltips.divine_pen.1": "造物主以此书写万物",
     "mrqx_extra_pack.tooltips.divine_pen.2": "主手持纸器官，副手持铁魔法的墨水右键，将对应的可书写数据写入该器官",
     "mrqx_extra_pack.tooltips.divine_pen.3": "墨水的稀有度越高，自身的胸腔属性越高，写入的属性越高",
@@ -319,11 +319,12 @@
     "mrqx_extra_pack.tooltips.mage_control_strong.3": "§b冻结损伤§r达到100时，消耗100§b冻结损伤§r使其额外受到100点冻结伤害（不致死，不受额外加成影响），并使其获得10s的§b缓慢§r、§b雪肤§r、§b冻结§r",
     "mrqx_extra_pack.tooltips.mage_control_strong.4": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
     "mrqx_extra_pack.tooltips.mage_control_strong.5": "激活后，冰霜法术强度+100%",
-    "mrqx_extra_pack.tooltips.magic_fast_charging_cpu.1": "“指令：快速充能”",
+    "mrqx_extra_pack.tooltips.magic_fast_charging_cpu.1": "指令：快速充能",
     "mrqx_extra_pack.tooltips.magic_fast_charging_cpu.2": "使你的法力上限减少90%，法力回复增加900%",
-    "mrqx_extra_pack.tooltips.magic_glass_cannon_cpu.1": "“指令：玻璃大炮”",
-    "mrqx_extra_pack.tooltips.magic_glass_cannon_cpu.2": "使你的最大生命值减少90%，法术强度增加900%",
-    "mrqx_extra_pack.tooltips.magic_overload_cpu.1": "“指令：过载模式”",
+    "mrqx_extra_pack.tooltips.magic_glass_cannon_cpu.1": "指令：“玻璃大炮”",
+    "mrqx_extra_pack.tooltips.magic_glass_cannon_cpu.2": "玻璃大炮，但也是大炮",
+    "mrqx_extra_pack.tooltips.magic_glass_cannon_cpu.3": "使你的最大生命值减少90%，法术强度增加900%",
+    "mrqx_extra_pack.tooltips.magic_overload_cpu.1": "指令：快速施法",
     "mrqx_extra_pack.tooltips.magic_overload_cpu.2": "使你的法力回复减少90%，冷却缩减增加900%",
     "mrqx_extra_pack.tooltips.malignant_tumor.1": "蔓延，增生，直到死亡，永不停息……",
     "mrqx_extra_pack.tooltips.malignant_tumor.2": "每分钟有(§2感染§r器官数)%的概率的概率触发：",
@@ -443,7 +444,7 @@
     "mrqx_extra_pack.tooltips.wing_of_soul.1": "无形的翼展，只能让你在空中滑翔",
     "mrqx_extra_pack.tooltips.wing_of_soul.2": "激活后，获得鞘翅飞行能力，飞行速度+2",
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.1": "The Start of the Worlds Impending Doom……",
-    "mrqx_extra_pack.tooltips.withered_nether_star_shard.2": "造成伤害时，额外造成(伤害值 × 凋零化)的§0凋亡损伤§r",
+    "mrqx_extra_pack.tooltips.withered_nether_star_shard.2": "造成伤害时，额外造成(伤害值 × 胸腔凋零化数值)的§0凋亡损伤§r",
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.3": "§0凋亡损伤§r达到100时，消耗100§0凋亡损伤§r使其额外受到100点凋零伤害（不致死，不受额外加成影响），并使其获得10s的§0凋零§r、§0凋零腐败§r、§0衰弱§r",
     "mrqx_extra_pack.tooltips.withered_nether_star_shard.4": "单次伤害可触发多次损伤效果，状态效果的等级可叠加",
     "tetra.material.mrqx_active_ender_dragon_bead": "激活·末影龙宝玉",
